<resources>
    <string name="app_name">f</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="precio">Precio</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="_1">1</string>
    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="eliminar">Eliminar</string>
    <string name="nombre_del_producto2">Nombre del producto</string>
    <string name="hola_usuario">Hola, Usuario</string>
    <string name="realizar_compra">Realizar Compra</string>
    <string name="total_s_0_00">Total: S/0.00</string>
    <string name="nombre_del_producto4">Nombre del producto</string>
    <string name="s_0_00">S/0.00</string>
    <string name="descripci_n_del_producto">Descripción del producto</string>
    <string name="a_adir_al_carrito">Añadir al carrito</string>
    <string name="regresar">Regresar</string>
    <string name="departamento">Departamento</string>
    <string name="provincia">Provincia</string>
    <string name="distrito">Distrito</string>
    <string name="farmacias_disponibles">Farmacias disponibles</string>
    <string name="c_mo_quieres_pagar">¿Cómo quieres pagar?</string>
    <string name="yape">YAPE</string>
    <string name="tarjeta">Tarjeta</string>
    <string name="pagoefectivo">PagoEfectivo</string>
    <string name="comprobante_de_pago">Comprobante de pago</string>
    <string name="boleta">Boleta</string>
    <string name="factura">Factura</string>
    <string name="regresar1">Regresar</string>
    <string name="finalizar_compra">Finalizar compra</string>
    <string name="ingresar">Ingresar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
</resources>