<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_image"
        android:text="@string/nombre_del_producto4"
        android:textSize="24sp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_name"
        android:text="@string/s_0_00"
        android:textSize="20sp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/product_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_price"
        android:text="@string/descripci_n_del_producto"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/add_to_cart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_description"
        android:text="@string/a_adir_al_carrito"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_description"
        android:text="@string/regresar"
        android:layout_toStartOf="@id/add_to_cart_button"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />

</RelativeLayout>