<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/product_image"
            android:text="@string/nombre_del_producto2"
            android:textSize="18sp"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_name"
            android:layout_toEndOf="@id/product_image"
            android:text="$0.00"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/product_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_price"
            android:layout_toEndOf="@id/product_image"
            android:text="@string/_1"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/increase_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_quantity"
            android:layout_alignStart="@id/product_quantity"
            android:layout_marginTop="8dp"
            android:text="@string/mas" />

        <Button
            android:id="@+id/decrease_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_quantity"
            android:layout_toEndOf="@id/increase_button"
            android:layout_marginTop="8dp"
            android:text="@string/menos" />

        <Button
            android:id="@+id/remove_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/eliminar" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>