<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="361dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"
        android:layout_below="@id/logoImageView"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"
        android:layout_below="@id/editTextEmail"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="16dp"/>
</RelativeLayout>
